<package>
  <name>sr_robot_msgs</name>
  <version>1.2.0</version>
  <description>sr_robot_msgs contains some messages used in the shadow_robot stack.</description>
  <maintainer email="ugo@shadowrobot.com">Ugo Cupcic</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_robot_msgs</url>

  <author email="ugo@shadowrobot.com">Ugo Cupcic</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

<export>
    <cpp cflags="-I${prefix}/include"/>
    <python path="${prefix}/src"/>
</export>

</package>