<package>
  <name>sr_description</name>
  <version>1.4.0</version>
  <description>sr_description contains the description for Shadow Robot's Hands.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_description</url>
  <url type="repository">https://github.com/shadow-robot/sr_common</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_common/issues</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>xacro</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>liburdfdom-dev</test_depend>
  <test_depend>urdf</test_depend>
  <test_depend>gtest</test_depend>

</package>
